# markdown-note

./: CMakeLists.txt  README.md  metadata.json
contents/config/: config.qml  main.xml
contents/ui/: ConfigGeneral.qml  main.qml
